# numpygrad

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  docs.yml  mypy.yml  publish.yml
docs/: conf.py  getting_started.rst  index.rst  requirements.txt
docs/api/: array.rst  nn.rst  ops.rst  optim.rst  random.rst  utils.rst
docs/concepts/: autograd.rst  no_grad.rst
docs/examples/: classification_2d.rst  gpt2.rst  mnist.rst  regression_1d.rst
docs/guide/: custom_modules.rst  training_loop.rst
examples/classification_2d/: data.py  main.py  visuals.py
examples/gpt2/: data.py  main.py  tokenizer.py
examples/mnist/: data.py  main.py
examples/regression_1d/: data.py  main.py  visuals.py
examples/utils/: optional_mpl.py  signals.py
scripts/: run-mypy-on-main  run-tests-on-main
src/numpygrad/: __init__.py  configuration.py  random.py
src/numpygrad/core/: __init__.py  array.py  array_creation.py  broadcasting.py  contexts.py  device.py  dispatch.py  dtypes.py  function.py  opid.py  ops.py  random.py  registry.py  version.py
src/numpygrad/nn/: __init__.py  activations.py  attention.py  conv.py  dropout.py  embedding.py  init.py  layer_norm.py  linear.py  loss.py  mlp.py  module.py  neuron.py
src/numpygrad/ops/: __init__.py  activations.py  attention.py  comparators.py  conv.py  core.py  elementwise.py  linalg.py  reductions.py  special.py  transforms.py
src/numpygrad/optim/: __init__.py  adamw.py  optimizer.py  sgd.py
src/numpygrad/utils/: __init__.py  io.py  logging.py  visualizations.py
src/numpygrad/utils/data/: __init__.py  dataloader.py  dataset.py
tests/: configuration.py  conftest.py  strategies.py  test_core.py  test_dataloader.py  test_ops.py  test_optim.py  test_random.py  test_versioning.py
tests/nn/: test_attention.py  test_conv.py  test_dropout.py  test_embedding.py  test_init.py  test_layer_norm.py  test_linear.py  test_loss.py  test_mlp.py  test_module.py
tests/ops/: test_activations.py  test_attention.py  test_conv.py  test_elementwise.py  test_gelu.py  test_linalg.py  test_masked_fill.py  test_new_elementwise.py  test_reductions.py  test_special.py  test_transforms.py
