[project]
name = "numpygrad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "hypothesis>=6.151.9",
    "ipdb>=0.13.13",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "setuptools<81.0.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
]
