[project]
name = "numpygrad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
]

[project.optional-dependencies]
tests = [
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "torch>=2.10.0",
]
examples = [
    "matplotlib>=3.10.8",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "graphviz>=0.21",
    "ipdb>=0.13.13",
    "matplotlib>=3.10.8",
    "pre-commit>=4.5.1",
    "setuptools>=80.10.2",
    "tensorboard>=2.20.0",
    "ruff>=0.15.4",
]

[tool.coverage.run]
omit = [
    "numpygrad/configuration.py",
    "src/numpygrad/utils/io.py",
    "src/numpygrad/utils/logging.py",
    "src/numpygrad/utils/visualizations.py",
    "*/__init__.py",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
strict_optional = true
exclude = "examples/|tests/|src/numpygrad/utils/visualizations\\.py$"
# exclude = ["examples/", "src/numpygrad/utils/visualizations\\.py", "tests/"]

[[tool.mypy.overrides]]
module = "graphviz"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpygrad.utils.visualizations"
ignore_errors = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    # "SIM",  # simplifications
    # "C4",   # comprehensions
    "TID",  # tidy imports
    # "RUF",  # ruff-specific
]
